# stock_analysis_platform_backend

./: .env  Cargo.toml  DOCS_API.md  GEMINI.md  README.md  StockExpert.postman_collection.json  start.sh
.agents/workflows/: sprint2_backend_workflow.md
logs/: app.log.2026-02-28  app.log.2026-03-03
migrations/: 20260222_init.sql
src/: auth.rs  config.rs  crypto.rs  db.rs  db_setup.rs  error.rs  logging.rs  main.rs  positions.rs  stocks.rs
