[package]
name = "stock_analysis_platform_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal", "uuid"] }
jsonwebtoken = "9"
bcrypt = "0.15"
yahoo_finance_api = "2.3"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
bigdecimal = { version = "0.3", features = ["serde"] }
aes-gcm = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-status"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dashmap = "5.5"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
